update of structure

--- a/index.html
+++ b/index.html
@@ -4,13 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Epsilon</title>
-    <link rel="stylesheet" href="css/estilos.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/responsive.css">
 </head>
 <body>
+    <!-- Header -->
     <header>
         <div class="logo">
             <div class="img"><img src="resources/logo/icon.jpg" alt="logo epsilon"></div>
-            Epsilon
+            <h1>EPSILON</h1>
+        </div>
+        <div class="hamburger">
+            <div class="line"></div>
+            <div class="line"></div>
+            <div class="line"></div>
         </div>
         <nav>
             <ul>
@@ -22,6 +29,7 @@
             </ul>
         </nav>
     </header>
+    <!-- Banner -->
     <section class="banner">
         <div class="info">
             <div class="info-title">
