adding structure services

--- a/index.html
+++ b/index.html
@@ -47,5 +47,28 @@
         </div>
         <div class="img"><img src="resources/img/img-background.png" alt="fondo laptop"></div>
     </section>
+    <!-- Services -->
+    <div class="services">
+        <h2>SERVICIOS DE DESARROLLO</h2>
+        <p>Soluciones digitales adaptadas a tus necesidades. Desde <b>sitios web</b> básicos hasta <b>plataformas</b> avanzadas, creamos experiencias únicas y optimizadas.</p>
+        <div class="services-cards">
+            <div class="card">
+                <h3>SITIO WEB DE PRESENTACIÓN</h3>
+                <div class="img"><img src="resources/img/serviceSW.jpg" alt="imagen sitio web"></div>
+                <p>Transmitimos la <i>identidad</i> de tu empresa con un diseño <i>profesional</i> y funcional, asegurando una presencia digital sólida y atractiva.</p>
+            </div>
+            <div class="card">
+                <h3>TIENDA ONLINE</h3>
+                <div class="img"><img src="resources/img/serviceSO.jpg" alt="imagen tienda online"></div>
+                <p>Plataformas de <i>comercio electrónico</i> personalizadas, listas para vender productos o servicios con facilidad, seguridad y eficiencia.</p>
+            </div>
+            <div class="card">
+                <h3>SITIO WEB DE MENBRESIA</h3>
+                <div class="img"><img src="resources/img/serviceSM.jpg" alt="imagen sitio de menbresia"></div>
+                <p>Sitios <i>exclusivos</i> con acceso restringido para <i>clientes</i> o <i>suscriptores</i>, ideales para comunidades, cursos o contenido premium.</p>
+            </div>
+        </div>
+        <div class="wave"><img src="resources/img/wave.svg" alt="wave"></div>
+    </div>
 </body>
 </html>
