adding website structure

--- a/index.html
+++ b/index.html
@@ -70,5 +70,136 @@
         </div>
         <div class="wave"><img src="resources/img/wave.svg" alt="wave"></div>
     </div>
+    <!-- Beneficios -->
+    <div class="benefits">
+        <h2>BENEFICIOS DE UN SITIO WEB</h2>
+        <div class="benefits-box">
+            <div class="img"><img src="resources/img/image-benefits.jpg" alt="celular en mano"></div>
+            <div class="benefits-info">
+                <div class="icons">
+                    <div class="icon">
+                        <div class="img"><img src="resources/img/tienda.png" alt="tienda"></div>
+                        <div></div>
+                    </div>
+                    <div class="icon">
+                        <div class="img"><img src="resources/img/edificios.png" alt="edificios"></div>
+                        <div></div>
+                    </div>
+                    <div class="icon">
+                        <div class="img"><img src="resources/img/colegio.png" alt="instituciones"></div>
+                        <div></div>
+                    </div>
+                </div>
+                <div class="benefits-options">
+                    <div class="benefits-option">
+                        <div class="icon"><img src="resources/img/check.png" alt=""></div>
+                        <div class="benefits-option-context">
+                            <h4>Visibiliza tu producto o servicio</h4>
+                            <p>
+                                Un sitio web es una herramienta para dar a conocer los <b>productos o servicios</b> de tu negocio. Ayuda a atraer <b>nuevos clientes</b> y genera confianza, haciendo que tu negocio sea accesible en todo momento.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="benefits-option">
+                        <div class="icon"><img src="resources/img/check.png" alt=""></div>
+                        <div class="benefits-option-context">
+                            <h4>Fortalece tu imagen y credibilidad</h4>
+                            <p>
+                                Un sitio web profesional para tu empresa establece una <b>imagen sólida y confiable.</b> Es fundamental para mejorar la comunicación con clientes, proveedores y socios, demostrando compromiso y seriedad.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="benefits-option">
+                        <div class="icon"><img src="resources/img/check.png" alt=""></div>
+                        <div class="benefits-option-context">
+                            <h4>Proporciona información de manera eficiente y profesional</h4>
+                            <p>
+                                Un sitio web transmite <b>seriedad y confianza.</b> Facilita el acceso a información relevante y actualizada para estudiantes, clientes o miembros, y permite un contacto directo y eficiente con tu audiencia.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Nuestro trabajo -->
+    <div class="our-work">
+        <h2>ACERCA DE NUESTRO TRABAJO</h2>
+        <p>
+            En Epsilon, creamos páginas web a medida, combinando diseño atractivo y funcionalidad. Trabajamos de forma transparente, manteniéndote informado en cada etapa del desarrollo, y ofrecemos soporte continuo para que tu sitio esté siempre actualizado y accesible, brindándote una presencia en internet visible para todo el país.
+        </p>
+        <div class="our-work-description">
+            <div class="card">
+                <div class="icon"><img src="resources/img/web.png" alt="web"></div>
+                <div class="info">DOMINIO GRATUITO POR UN AÑO</div>
+            </div>
+            <div class="card">
+                <div class="icon"><img src="resources/img/cloud.png" alt="nube"></div>
+                <div class="info">HOSTING GRATUITO POR UN AÑO</div>
+            </div>
+            <div class="card">
+                <div class="icon"><img src="resources/img/setting.png" alt="ajustes"></div>
+                <div class="info">SOPORTE GRATUITO POR UN MES</div>
+            </div>
+            <div class="card">
+                <div class="icon"><img src="resources/img/personalized.png" alt="estrechar manos"></div>
+                <div class="info">DISEÑO PERSONALIZADO</div>
+            </div>
+            <div class="card">
+                <div class="icon"></div>
+                <div class="info">INTEGRACIONES POR REDES SOCIALES</div>
+            </div>
+            <div class="card">
+                <div class="icon"><img src="resources/img/design.png" alt="pantalla"></div>
+                <div class="info">DISEÑO RESPONSIVO</div>
+            </div>
+            <div class="card">
+                <div class="icon"><img src="resources/img/time.png" alt="reloj"></div>
+                <div class="info">TIEMPO DE ENTREGA DE 2 A 4 SEMANAS</div>
+            </div>
+            <div class="card">
+                <div class="icon"><img src="resources/img/pay.png" alt="pagar"></div>
+                <div class="info">FORMAS DE PAGO 30% AL INICIO</div>
+            </div>
+        </div>
+        <div class="our-work-info">
+            <button>Contactar</button>
+            <button>Más información</button>
+        </div>
+    </div>
+    <!-- Desarrollo y mantenimiento-->
+    <div class="development-maintenance">
+        <div class="img"><img src="resources/img/bg-dev-maint.png" alt="planeta"></div>
+        <div class="development-maintenance-cards">
+            <div class="card">
+                <div class="img"><img src="resources/img/development-web.png" alt="desarrollo web"></div>
+                <div class="body">
+                    <h3>Desarrollo Web Profesional</h3>
+                    <p>Nos encargamos del desarrollo de tu sitio web de forma transparente y eficiente</p>
+                    <button>Ver Planes</button>
+                </div>
+            </div>
+            <div class="card">
+                <div class="img"><img src="resources/img/maintenance-support.png" alt="mantenimiento y soporte"></div>
+                <div class="body">
+                    <h3>Mantenimiento y Soporte</h3>
+                    <p>Nos encargamos de actualizaciones de diseño y contenido, seguridad y optimización de tu sitio web</p>
+                    <button>Más Información</button>
+                </div>
+            </div>
+            <div class="card">
+                <div class="img"><img src="resources/img/development-software.png" alt="desarrollo de sistemas"></div>
+                <div class="body">
+                    <h3>Desarrollo de Sistemas Informáticos</h3>
+                    <p>Desarrollamos sistemas, creados soluciones que optimizan procesos y se adaptan a tus necesidades</p>
+                    <button>Ver Planes</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Pie de pagina -->
+    <footer>
+
+    </footer>
 </body>
 </html>
