adding styles for section of benefits and strutura of html

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <div class="wave"><img src="resources/img/wave.svg" alt="wave"></div>
     </div>
     <!-- Beneficios -->
-    <div class="benefits">
+    <section class="benefits">
         <h2>BENEFICIOS DE UN SITIO WEB</h2>
         <div class="benefits-box">
             <div class="img"><img src="resources/img/image-benefits.jpg" alt="celular en mano"></div>
@@ -79,15 +79,21 @@
                 <div class="icons">
                     <div class="icon">
                         <div class="img"><img src="resources/img/tienda.png" alt="tienda"></div>
-                        <div></div>
+                        <h3>Negocios</h3>
+                        <div class="circle"></div>
+                        <div class="circle-b"></div>
                     </div>
                     <div class="icon">
                         <div class="img"><img src="resources/img/edificios.png" alt="edificios"></div>
-                        <div></div>
+                        <h3>Empresas</h3>
+                        <div class="circle"></div>
+                        <div class="circle-b"></div>
                     </div>
                     <div class="icon">
                         <div class="img"><img src="resources/img/colegio.png" alt="instituciones"></div>
-                        <div></div>
+                        <h3>Instituciones</h3>
+                        <div class="circle"></div>
+                        <div class="circle-b"></div>
                     </div>
                 </div>
                 <div class="benefits-options">
@@ -121,7 +127,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </section>
     <!-- Nuestro trabajo -->
     <div class="our-work">
         <h2>ACERCA DE NUESTRO TRABAJO</h2>
